--- a/www/src/components/head-meta.astro
+++ b/www/src/components/head-meta.astro
@@ -1,10 +1,10 @@
 ---
-import "@terrazzo/tokens/dist/index.css";
-import "@terrazzo/fonts/fragment-mono.css";
-import "@terrazzo/fonts/instrument-sans.css";
-import "@terrazzo/tiles/dist/styles.css";
-import "@terrazzo/react-color-picker/dist/styles.css";
-import "../styles/app.css";
+import '@terrazzo/tokens/dist/index.css';
+import '@terrazzo/fonts/fragment-mono.css';
+import '@terrazzo/fonts/instrument-sans.css';
+import '@terrazzo/tiles/dist/styles.css';
+import '@terrazzo/react-color-picker/dist/styles.css';
+import '../styles/app.css';
 
 const { title, description, socialImage } = Astro.props;
 ---
