--- a/www/src/layouts/default.astro
+++ b/www/src/layouts/default.astro
@@ -1,5 +1,5 @@
 ---
-import HeadMeta from "../components/head-meta.astro";
+import HeadMeta from '../components/head-meta.astro';
 
 const { title, description, socialImage } = Astro.props;
 ---
