--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import { ButtonLink } from "@terrazzo/tiles";
-import DefaultLayout from "../layouts/default.astro";
+import { ButtonLink } from '@terrazzo/tiles';
+import DefaultLayout from '../layouts/default.astro';
 ---
 
 <DefaultLayout>
