--- a/www/src/pages/token-lab/index.astro
+++ b/www/src/pages/token-lab/index.astro
@@ -1,5 +1,5 @@
 ---
-import DefaultLayout from "../../layouts/default.astro";
+import DefaultLayout from '../../layouts/default.astro';
 ---
 
 <DefaultLayout>
