--- a/www/src/components/docs-header-nav.astro
+++ b/www/src/components/docs-header-nav.astro
@@ -1,6 +1,6 @@
 ---
-import { GitHubLogo } from "@terrazzo/icons";
-import DocsSearch from "./SearchBox.tsx";
+import { GitHubLogo } from '@terrazzo/icons';
+import DocsSearch from './SearchBox.tsx';
 ---
 
 <header class="header-nav">
