--- a/www/src/layouts/docs.astro
+++ b/www/src/layouts/docs.astro
@@ -1,8 +1,8 @@
 ---
-import DocsHeaderNav from "../components/docs-header-nav.astro";
-import DocsSidenav from "../components/docs-sidenav.astro";
-import HeadMeta from "../components/head-meta.astro";
-import "../styles/docs.css";
+import DocsHeaderNav from '../components/docs-header-nav.astro';
+import DocsSidenav from '../components/docs-sidenav.astro';
+import HeadMeta from '../components/head-meta.astro';
+import '../styles/docs.css';
 
 const { frontmatter } = Astro.props;
 ---
