--- a/www/src/components/docs-sidenav.astro
+++ b/www/src/components/docs-sidenav.astro
@@ -1,5 +1,5 @@
 ---
-import { getAriaCurrent } from "../lib/navigation";
+import { getAriaCurrent } from '../lib/navigation';
 
 const NAV_ITEMS = [
   // {
@@ -7,50 +7,58 @@ const NAV_ITEMS = [
   //   items: [{ url: "/token-lab", title: "Coming Soon!" }],
   // },
   {
-    title: "Guides",
-    items: [{ url: "/guides/tokens", title: "What are Design Tokens?" }],
+    title: 'Guides',
+    items: [{ url: '/guides/tokens', title: 'Design Tokens' }],
   },
   {
-    title: "CLI",
+    title: 'CLI',
     items: [
-      { url: "/cli", title: "Intro" },
-      { url: "/cli/config", title: "Config" },
-      { url: "/cli/migrating", title: "Migrating from Cobalt" },
+      { url: '/cli', title: 'Intro' },
+      { url: '/cli/config', title: 'Config' },
+      { url: '/cli/migrating', title: 'Migrating from Cobalt' },
 
       {
-        title: "Integrations",
-        url: "/cli/integrations",
+        title: 'Integrations',
+        url: '/cli/integrations',
         items: [
-          { url: "css", title: "CSS" },
-          { url: "sass", title: "Sass" },
-          { url: "js", title: "JS/TS" },
-          { url: "json", title: "Native Apps" },
-          { url: "tailwind", title: "Tailwind" },
-          { url: "custom", title: "Custom" },
+          { url: 'css', title: 'CSS' },
+          { url: 'sass', title: 'Sass' },
+          { url: 'js', title: 'JS/TS' },
+          { url: 'json', title: 'Native Apps' },
+          { url: 'tailwind', title: 'Tailwind' },
+          { url: 'custom', title: 'Custom' },
         ],
       },
       {
-        url: "/cli/api",
-        title: "API",
+        url: '/cli/api',
+        title: 'API',
         items: [
-          { url: "plugin-development", title: "Plugin Development" },
-          { url: "js", title: "JS API" },
+          { url: 'plugin-development', title: 'Plugin Development' },
+          { url: 'js', title: 'JS API' },
         ],
       },
     ],
   },
   {
-    title: "Components",
+    title: 'Components',
     items: [
-      { url: "/components/color-picker", title: "ColorPicker" },
-      { url: "/components/tiles", title: "Tiles DS" },
+      { url: '/components/button', title: 'Button' },
+      { url: '/components/button-link', title: 'ButtonLink' },
+      { url: '/components/color-picker', title: 'ColorPicker' },
+      { url: '/components/fieldset', title: 'Fieldset' },
+      { url: '/components/kbd', title: 'Kbd' },
+      { url: '/components/omni-bar', title: 'OmniBar' },
+      { url: '/components/subtle-input', title: 'SubtleInput' },
+      { url: '/components/switch', title: 'Switch' },
+      { url: '/components/token-type', title: 'TokenType' },
+      { url: '/components/tooltip', title: 'Tooltip' },
     ],
   },
   {
-    title: "Reference",
+    title: 'Reference',
     items: [
-      { url: "/reference/tokens", title: "Token Types" },
-      { url: "/reference/about", title: "About the Project" },
+      { url: '/reference/tokens', title: 'Token Types' },
+      { url: '/reference/about', title: 'About the Project' },
     ],
   },
 ];
@@ -161,7 +169,6 @@ const NAV_ITEMS = [
   .sidenav {
     --grid: var(--tz-space-500);
 
-    background-color: var(--tz-surface-secondary-bg);
     color: var(--tz-surface-secondary-text);
     display: flex;
     flex-direction: column;
