Fix lint errors

--- a/www/src/components/docs-sidenav.astro
+++ b/www/src/components/docs-sidenav.astro
@@ -1,5 +1,5 @@
 ---
-import { getAriaCurrent } from "../lib/navigation";
+import { getAriaCurrent } from '../lib/navigation';
 
 const NAV_ITEMS = [
   // {
@@ -7,53 +7,53 @@ const NAV_ITEMS = [
   //   items: [{ url: "/token-lab", title: "Coming Soon!" }],
   // },
   {
-    title: "Guides",
+    title: 'Guides',
     items: [
-      { url: "/guides/dtcg", title: "DTCG Tokens" },
-      { url: "/guides/modes", title: "Modes + Theming" },
+      { url: '/guides/dtcg', title: 'DTCG Tokens' },
+      { url: '/guides/modes', title: 'Modes + Theming' },
     ],
   },
   {
-    title: "CLI",
+    title: 'CLI',
     items: [
-      { url: "/cli", title: "Intro" },
-      { url: "/cli/config", title: "Config" },
-      { url: "/cli/migrating", title: "Migrating from Cobalt" },
+      { url: '/cli', title: 'Intro' },
+      { url: '/cli/config', title: 'Config' },
+      { url: '/cli/migrating', title: 'Migrating from Cobalt' },
       {
-        title: "Integrations",
-        url: "/cli/integrations",
+        title: 'Integrations',
+        url: '/cli/integrations',
         items: [
-          { url: "css", title: "CSS" },
-          { url: "sass", title: "Sass" },
-          { url: "js", title: "JS/TS" },
-          { url: "json", title: "Native Apps" },
-          { url: "swift", title: "Swift" },
-          { url: "tailwind", title: "Tailwind" },
-          { url: "custom", title: "Custom" },
+          { url: 'css', title: 'CSS' },
+          { url: 'sass', title: 'Sass' },
+          { url: 'js', title: 'JS/TS' },
+          { url: 'json', title: 'Native Apps' },
+          { url: 'swift', title: 'Swift' },
+          { url: 'tailwind', title: 'Tailwind' },
+          { url: 'custom', title: 'Custom' },
         ],
       },
       {
-        url: "/cli/api",
-        title: "API",
+        url: '/cli/api',
+        title: 'API',
         items: [
-          { url: "plugin-development", title: "Plugin Development" },
-          { url: "js", title: "JS API" },
+          { url: 'plugin-development', title: 'Plugin Development' },
+          { url: 'js', title: 'JS API' },
         ],
       },
     ],
   },
   {
-    title: "Components",
+    title: 'Components',
     items: [
-      { url: "/components/color-picker", title: "ColorPicker" },
-      { url: "/components/demo", title: "Demo" },
+      { url: '/components/color-picker', title: 'ColorPicker' },
+      { url: '/components/demo', title: 'Demo' },
     ],
   },
   {
-    title: "Reference",
+    title: 'Reference',
     items: [
-      { url: "/reference/tokens", title: "Token Types" },
-      { url: "/reference/about", title: "About the Project" },
+      { url: '/reference/tokens', title: 'Token Types' },
+      { url: '/reference/about', title: 'About the Project' },
     ],
   },
 ];
