--- a/packages/react-color-picker/src/components/ColorChannelSlider.css
+++ b/packages/react-color-picker/src/components/ColorChannelSlider.css
@@ -32,14 +32,11 @@
 
   &::after {
     border-radius: var(--tz-color-channel-slider-track-height);
-    bottom: 0;
     box-shadow: inset 0 0 0 1px rgb(0 0 0/0.2);
     content: "";
-    left: 0;
+    inset: 0;
     pointer-events: none;
     position: absolute;
-    right: 0;
-    top: 0;
     z-index: 2;
   }
 }
@@ -100,8 +97,8 @@
     flex-shrink: 0;
     height: var(--tz-color-channel-slider-track-height);
     left: 100%;
-    top: 0;
     position: absolute;
+    top: 0;
     width: calc(0.5 * var(--tz-color-channel-slider-track-height));
   }
 }
