--- a/packages/plugin-css/test/fixtures/type-color/want.css
+++ b/packages/plugin-css/test/fixtures/type-color/want.css
@@ -5,7 +5,7 @@
 :root {
   --ds-color-blue: color(srgb 0.12941176470588237 0.5450980392156862 1);
   --ds-color-action: var(--ds-color-blue);
-  --ds-color-hdr-blue: oklch(0.6412 0.19541284179687501 254.98);
+  --ds-color-hdr-blue: color(srgb -7.889244812986363e-15 0.5357343296597399 0.9999999999999997);
   --ds-semantic-inline-link: var(--ds-color-blue);
   --ds-gradient-blue-pink: color(srgb 0.12941176470588237 0.5450980392156862 1) 0%, color(srgb 0.9098039215686274 0.35294117647058826 0.6784313725490196) 100%;
   --ds-gradient-default: var(--ds-gradient-blue-pink);
@@ -13,127 +13,127 @@
 
 @media (color-gamut: p3) {
   :root {
-    --ds-color-hdr-blue: oklch(0.6412 0.21049621582031253 254.98);
+    --ds-color-hdr-blue: color(display-p3 0.17546628160974162 0.5202121016217128 0.9999999999999999);
   }
 }
 
 @media (color-gamut: rec2020) {
   :root {
-    --ds-color-hdr-blue: oklch(0.6412 0.21309277343750002 254.98);
+    --ds-color-hdr-blue: color(rec2020 0.3209817156326149 0.47226959394393686 1.0000000000000002);
   }
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     --ds-color-blue: color(srgb 0.12941176470588237 0.5450980392156862 1);
-    --ds-color-hdr-blue: oklch(0.6412 0.19541284179687501 254.98);
+    --ds-color-hdr-blue: color(srgb -7.889244812986363e-15 0.5357343296597399 0.9999999999999997);
   }
 }
 
 [data-color-theme="light"] {
   --ds-color-blue: color(srgb 0.12941176470588237 0.5450980392156862 1);
-  --ds-color-hdr-blue: oklch(0.6412 0.19541284179687501 254.98);
+  --ds-color-hdr-blue: color(srgb -7.889244812986363e-15 0.5357343296597399 0.9999999999999997);
 }
 
 @media (prefers-color-scheme: light) {
   @media (color-gamut: p3) {
     :root {
-      --ds-color-hdr-blue: oklch(0.6412 0.21049621582031253 254.98);
+      --ds-color-hdr-blue: color(display-p3 0.17546628160974162 0.5202121016217128 0.9999999999999999);
     }
   }
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="light"] {
-    --ds-color-hdr-blue: oklch(0.6412 0.21049621582031253 254.98);
+    --ds-color-hdr-blue: color(display-p3 0.17546628160974162 0.5202121016217128 0.9999999999999999);
   }
 }
 
 @media (prefers-color-scheme: light) {
   @media (color-gamut: rec2020) {
     :root {
-      --ds-color-hdr-blue: oklch(0.6412 0.21309277343750002 254.98);
+      --ds-color-hdr-blue: color(rec2020 0.3209817156326149 0.47226959394393686 1.0000000000000002);
     }
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="light"] {
-    --ds-color-hdr-blue: oklch(0.6412 0.21309277343750002 254.98);
+    --ds-color-hdr-blue: color(rec2020 0.3209817156326149 0.47226959394393686 1.0000000000000002);
   }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --ds-color-blue: color(srgb 0.2196078431372549 0.5450980392156862 0.9921568627450981);
-    --ds-color-hdr-blue: oklch(0.6471 0.19018505859375 257.45);
+    --ds-color-hdr-blue: color(srgb 0.13748909829685632 0.5371632643751101 1.0000000000000002);
   }
 }
 
 [data-color-theme="dark"] {
   --ds-color-blue: color(srgb 0.2196078431372549 0.5450980392156862 0.9921568627450981);
-  --ds-color-hdr-blue: oklch(0.6471 0.19018505859375 257.45);
+  --ds-color-hdr-blue: color(srgb 0.13748909829685632 0.5371632643751101 1.0000000000000002);
 }
 
 @media (prefers-color-scheme: dark) {
   @media (color-gamut: p3) {
     :root {
-      --ds-color-hdr-blue: oklch(0.6471 0.2050146484375 257.45);
+      --ds-color-hdr-blue: color(display-p3 0.2389375205770652 0.5222077462959255 0.9999999999999999);
     }
   }
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="dark"] {
-    --ds-color-hdr-blue: oklch(0.6471 0.2050146484375 257.45);
+    --ds-color-hdr-blue: color(display-p3 0.2389375205770652 0.5222077462959255 0.9999999999999999);
   }
 }
 
 @media (prefers-color-scheme: dark) {
   @media (color-gamut: rec2020) {
     :root {
-      --ds-color-hdr-blue: oklch(0.6471 0.20758471679687499 257.45);
+      --ds-color-hdr-blue: color(rec2020 0.3456997065436288 0.47530781739412375 1);
     }
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark"] {
-    --ds-color-hdr-blue: oklch(0.6471 0.20758471679687499 257.45);
+    --ds-color-hdr-blue: color(rec2020 0.3456997065436288 0.47530781739412375 1);
   }
 }
 
 [data-color-theme="light-colorblind"] {
   --ds-color-blue: color(srgb 0.12941176470588237 0.5450980392156862 1);
-  --ds-color-hdr-blue: oklch(0.6412 0.19541284179687501 254.98);
+  --ds-color-hdr-blue: color(srgb -7.889244812986363e-15 0.5357343296597399 0.9999999999999997);
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="light-colorblind"] {
-    --ds-color-hdr-blue: oklch(0.6412 0.21049621582031253 254.98);
+    --ds-color-hdr-blue: color(display-p3 0.17546628160974162 0.5202121016217128 0.9999999999999999);
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="light-colorblind"] {
-    --ds-color-hdr-blue: oklch(0.6412 0.21309277343750002 254.98);
+    --ds-color-hdr-blue: color(rec2020 0.3209817156326149 0.47226959394393686 1.0000000000000002);
   }
 }
 
 [data-color-theme="light-high-contrast"] {
   --ds-color-blue: color(srgb 0.06666666666666667 0.40784313725490196 0.8901960784313725);
-  --ds-color-hdr-blue: oklch(0.5441 0.21295874023437505 259.2);
+  --ds-color-hdr-blue: color(srgb -9.68225499775599e-15 0.35691591247017795 0.9999999999999997);
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="light-high-contrast"] {
-    --ds-color-hdr-blue: oklch(0.5441 0.269016357421875 259.2);
+    --ds-color-hdr-blue: color(display-p3 5.020428517354958e-15 0.3441236630982748 0.9999999999999997);
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="light-high-contrast"] {
-    --ds-color-hdr-blue: oklch(0.5441 0.274 259.2);
+    --ds-color-hdr-blue: color(rec2020 0.2240351080714258 0.29742790040417616 0.9973424951821133);
   }
 }
 
@@ -144,34 +144,35 @@
 
 [data-color-theme="dark-high-contrast"] {
   --ds-color-blue: color(srgb 0.25098039215686274 0.6196078431372549 1);
-  --ds-color-hdr-blue: oklch(0.6971 0.16343115234375 252.17790084227943);
+  --ds-color-hdr-blue: color(srgb 0.20518218487690842 0.6263569893601698 0.9999999999999994);
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="dark-high-contrast"] {
-    --ds-color-hdr-blue: oklch(0.6971 0.17665576171875003 252.17790084227943);
+    --ds-color-hdr-blue: color(display-p3 0.33316083239768096 0.6177929334477471 0.9999999999999999);
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark-high-contrast"] {
-    --ds-color-hdr-blue: oklch(0.6971 0.1788896484375 252.17790084227943);
+    --ds-color-hdr-blue: color(rec2020 0.4150037103011196 0.5744758783087993 1);
   }
 }
 
 [data-color-theme="dark-colorblind"] {
   --ds-color-blue: color(srgb 0.2196078431372549 0.5450980392156862 0.9921568627450981);
-  --ds-color-hdr-blue: oklch(0.6471 0.19018505859375 257.45);
+  --ds-color-hdr-blue: color(srgb 0.13748909829685632 0.5371632643751101 1.0000000000000002);
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="dark-colorblind"] {
-    --ds-color-hdr-blue: oklch(0.6471 0.2050146484375 257.45);
+    --ds-color-hdr-blue: color(display-p3 0.2389375205770652 0.5222077462959255 0.9999999999999999);
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark-colorblind"] {
-    --ds-color-hdr-blue: oklch(0.6471 0.20758471679687499 257.45);
+    --ds-color-hdr-blue: color(rec2020 0.3456997065436288 0.47530781739412375 1);
   }
 }
+
