--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -15,7 +15,7 @@ import DefaultLayout from '../layouts/default.astro';
         aria-label="Terrazzo Logo"
         ><path
           d="m19.9333 21.792s0 1.5596-1.7302 1.5596h-16.47285c-1.73025 0-1.73025-1.5596-1.73025-1.5596z"
-          fill="#8cd10c"></path><g fill="var(--tz-color-base-gray-1200)"
+          fill="#8cd10c"></path><g fill="var(--tz-color-content-text)"
           ><path
             d="m8.9733.5h-8.747783c-.124035 0-.225517.101495-.225517.225544v8.748856c0 .20074.24243.3011.384506.15901l8.748914-8.748857c.14207-.142093.04172-.384553-.15899-.384553z"
           ></path><path
@@ -101,10 +101,10 @@ import DefaultLayout from '../layouts/default.astro';
   }
 
   .beta {
-    background-color: var(--tz-color-base-gray-300);
-    border: 1px solid var(--tz-surface-secondary-border);
+    background-color: var(--tz-color-content-bg-aside);
+    border: 1px solid var(--tz-color-content-border-aside);
     border-radius: var(--tz-radius-300);
-    color: var(--tz-surface-secondary-text);
+    color: var(--tz-color-content-text-aside);
     display: inline-block;
     font-family: var(--tz-typography-family-mono);
     font-size: var(--tz-typography-200-regular-font-size);
