--- a/packages/tiles/src/Button/Button.css
+++ b/packages/tiles/src/Button/Button.css
@@ -1,8 +1,8 @@
 .tz-button {
-  --tz-button-text: var(--tz-button-primary-text);
-  --tz-button-bg: var(--tz-button-primary-bg);
-  --tz-button-border: var(--tz-button-primary-border);
-  --tz-button-height: var(--tz-control-default-size);
+  --tz-button-text: var(--tz-color-content-bg);
+  --tz-button-bg: var(--tz-color-content-text);
+  --tz-button-border: var(--tz-button-bg);
+  --tz-button-height: var(--tz-space-control-m);
   --tz-button-gap: var(--tz-space-200);
   --tz-button-padding: var(--tz-space-300);
 
@@ -33,57 +33,24 @@
   text-decoration: none;
 
   &:focus-visible {
-    outline-color: var(--tz-nav-primary-highlight);
-  }
-
-  &:hover {
-    --tz-button-bg: var(--tz-button-primary-hover-bg);
-    --tz-button-border: var(--tz-button-primary-hover-border);
-    --tz-button-text: var(--tz-button-primary-hover-text);
+    outline-color: var(--tz-color-control-border-focus);
   }
 
   &[data-size="s"] {
-    --tz-button-height: var(--tz-control-small-size);
+    --tz-button-height: var(--tz-space-control-s);
 
     font-size: var(--tz-typography-200-medium-font-size);
     letter-spacing: var(--tz-typography-200-medium-letter-spacing);
   }
 
   &[data-variant="secondary"] {
-    --tz-button-bg: var(--tz-button-secondary-bg);
-    --tz-button-border: var(--tz-button-secondary-border);
-    --tz-button-text: var(--tz-button-secondary-text);
-
-    &:hover {
-      --tz-button-bg: var(--tz-button-secondary-hover-bg);
-      --tz-button-border: var(--tz-button-secondary-hover-border);
-      --tz-button-text: var(--tz-button-secondary-hover-text);
-    }
-  }
-
-  &[data-variant="tertiary"] {
-    --tz-button-bg: var(--tz-button-tertiary-bg);
-    --tz-button-border: var(--tz-button-tertiary-border);
-    --tz-button-text: var(--tz-button-tertiary-text);
-
-    &:hover {
-      --tz-button-bg: var(--tz-button-tertiary-hover-bg);
-      --tz-button-border: var(--tz-button-tertiary-hover-border);
-      --tz-button-text: var(--tz-button-tertiary-hover-text);
-    }
+    --tz-button-bg: var(--tz-color-control-bg);
+    --tz-button-border: var(--tz-color-control-border);
+    --tz-button-text: var(--tz-color-control-text);
   }
 
   &:disabled {
-    --tz-button-bg: var(--tz-color-base-gray-400);
-    --tz-button-border: var(--tz-color-base-gray-500);
-    --tz-button-text: var(--tz-color-base-gray-800);
-
     cursor: default;
-
-    &:hover {
-      --tz-button-bg: var(--tz-color-base-gray-400);
-      --tz-button-border: var(--tz-color-base-gray-500);
-      --tz-button-text: var(--tz-color-base-gray-800);
-    }
+    opacity: 0.5;
   }
 }
