--- a/www/src/styles/docs.css
+++ b/www/src/styles/docs.css
@@ -1,4 +1,11 @@
 .md-content {
+  display: flex;
+  flex-direction: column;
+
+  > * {
+    order: 99;
+  }
+
   h1,
   h2,
   h3,
@@ -49,20 +56,30 @@
   a {
     &:hover,
     &:focus-visible {
-      background-color: var(--tz-nav-primary-selected-bg);
+      background-color: var(--tz-color-control-bg-selected);
     }
   }
 
   > * {
-    margin-block: var(--tz-space-600);
+    margin-block: var(--tz-space-400);
+
+    @media (width >= 1600px) {
+      margin-block: var(--tz-space-600);
+    }
   }
 
   li {
-    font-size: var(--tz-typography-400-regular-font-size);
-    letter-spacing: var(--tz-typography-400-regular-letter-spacing);
-    line-height: var(--tz-typography-400-regular-line-height);
+    font-size: var(--tz-typography-300-regular-font-size);
+    letter-spacing: var(--tz-typography-300-regular-letter-spacing);
+    line-height: var(--tz-typography-300-regular-line-height);
     margin-block: var(--tz-space-400);
     padding-inline-start: var(--tz-space-200);
+
+    @media (width >= 1600px) {
+      font-size: var(--tz-typography-400-regular-font-size);
+      letter-spacing: var(--tz-typography-400-regular-letter-spacing);
+      line-height: var(--tz-typography-400-regular-line-height);
+    }
   }
 
   img {
@@ -84,14 +101,9 @@
   li,
   td {
     code {
-      background-color: color-mix(
-        in oklab,
-        var(--tz-color-ui-subdued-text),
-        transparent 90%
-      );
-      border: 1px solid
-        color-mix(in oklab, var(--tz-color-ui-subdued-text), transparent 80%);
-      border-radius: var(--tz-radius-1);
+      background-color: var(--tz-color-content-bg-aside);
+      border: 1px solid var(--tz-color-content-border-aside);
+      border-radius: var(--tz-radius-200);
       display: inline-block;
       font-size: 0.875em;
       margin-inline: 0.125em;
@@ -100,8 +112,8 @@
   }
 
   figure {
-    background-color: var(--tz-surface-secondary-bg);
-    border: 1px solid var(--tz-surface-secondary-border);
+    background-color: var(--tz-color-content-bg);
+    border: 1px solid var(--tz-color-content-border);
     border-radius: var(--tz-radius-400);
     margin-inline: 0;
     padding: var(--tz-space-400);
@@ -130,9 +142,14 @@
   }
 
   p {
-    font-size: var(--tz-typography-400-regular-font-size);
-    letter-spacing: var(--tz-typography-400-regular-letter-spacing);
+    font-size: var(--tz-typography-300-regular-font-size);
+    letter-spacing: var(--tz-typography-300-regular-letter-spacing);
     line-height: 1.75;
+
+    @media (width >= 1600px) {
+      font-size: var(--tz-typography-400-regular-font-size);
+      letter-spacing: var(--tz-typography-400-regular-letter-spacing);
+    }
   }
 
   > details > summary {
@@ -145,7 +162,7 @@
     position: relative;
 
     &:hover {
-      background-color: var(--tz-color-base-gray-200);
+      background-color: var(--tz-color-content-bg-aside);
     }
 
     &::after {
@@ -172,7 +189,7 @@
   }
 
   details[open] summary {
-    border-bottom-color: var(--tz-color-base-gray-400);
+    border-bottom-color: var(--tz-color-content-border);
 
     &::after {
       transform: rotate(0.5turn);
@@ -184,13 +201,13 @@
   }
 
   th {
-    border-bottom: 1px solid var(--tz-color-ui-subdued-border);
+    border-bottom: 1px solid var(--tz-color-content-border);
     font-weight: 700;
   }
 
   th,
   td {
-    border: 1px solid var(--tz-surface-primary-border);
+    border: 1px solid var(--tz-color-content-border);
     font-size: var(--tz-typography-200-regular-font-size);
     letter-spacing: var(--tz-typography-200-regular-letter-spacing);
     line-height: var(--tz-typography-200-regular-line-height);
@@ -198,7 +215,7 @@
   }
 
   kbd {
-    border: 1px solid var(--tz-surface-primary-border);
+    border: 1px solid var(--tz-color-content-border);
     border-radius: var(--tz-radius-300);
     display: inline-block;
     line-height: 1;
@@ -207,14 +224,14 @@
   }
 
   tr:nth-of-type(even) td {
-    background-color: var(--tz-surface-secondary-bg);
+    background-color: var(--tz-color-content-bg-aside);
   }
 }
 
 .callout {
   --padding: var(--tz-space-400);
 
-  background-color: var(--tz-surface-secondary-bg);
+  background-color: var(--tz-color-content-bg-aside);
   border-radius: var(--tz-radius-300);
   color: var(--tz-text-secondary);
   margin-left: calc(-1 * var(--padding));
@@ -237,7 +254,7 @@
 .callout--info,
 .callout--tip,
 .callout--note {
-  background-color: var(--tz-color-base-blue-200);
+  background-color: var(--tz-color-base-blue-100);
   color: var(--tz-color-base-blue-1200);
 
   .callout-indicator {
@@ -274,7 +291,7 @@
 
   line-height: 1.5;
   margin: 0;
-  min-height: calc(var(--tz-control-default-size) + 2 * var(--code-padding));
+  min-height: calc(var(--tz-space-control-m) + 2 * var(--code-padding));
   overflow-x: auto;
   padding: var(--code-padding);
 
@@ -299,9 +316,9 @@
   font-family: var(--tz-typography-200-regular-font-family);
   font-size: var(--tz-typography-200-regular-font-size);
   font-weight: var(--tz-typography-200-regular-font-weight);
-  height: var(--tz-control-default-size);
+  height: var(--tz-space-control-m);
   letter-spacing: var(--tz-typography-200-regular-letter-spacing);
-  line-height: var(--tz-control-default-size);
+  line-height: var(--tz-space-control-m);
   outline: 2px solid transparent;
   padding: 0 var(--code-padding);
   position: relative;
@@ -330,7 +347,7 @@
 .md-content > .code-block-wrapper {
   &[data-language="sh"],
   &[data-language="bash"] {
-    --chrome-border-color: var(--tz-surface-primary-border);
+    --chrome-border-color: var(--tz-color-content-border);
     --chrome-height: var(--tz-space-600);
 
     margin-top: calc(var(--tz-space-600) + var(--chrome-height));
@@ -404,7 +421,7 @@
   color: color(srgb 1 1 1 / 0.75);
   cursor: pointer;
   display: inline-flex;
-  height: var(--tz-control-default-size);
+  height: var(--tz-space-control-m);
   justify-content: center;
   position: absolute;
   right: var(--tz-space-400);
@@ -412,7 +429,7 @@
   transition:
     background-color var(--tz-timing-default) var(--tz-ease-linear),
     color var(--tz-timing-default) var(--tz-ease-linear);
-  width: var(--tz-control-default-size);
+  width: var(--tz-space-control-m);
   z-index: var(--tz-layer-base);
 
   &:hover {
@@ -427,14 +444,23 @@
   font-size: var(--tz-typography-200-regular-font-size);
   letter-spacing: var(--tz-typography-200-regular-letter-spacing);
   line-height: var(--tz-typography-200-regular-line-height);
-  overflow-y: auto;
-  position: fixed;
-  right: var(--tz-space-400);
-  top: 0;
-  width: 14rem;
+  order: 1;
 
-  h4 {
+  @media (width >= 1200px) {
+    overflow-y: auto;
+    position: fixed;
+    right: var(--tz-space-400);
+    top: 0;
+    width: 14rem;
+  }
+
+  h4#contents {
     margin-bottom: var(--tz-space-300);
+    padding-top: 0;
+
+    @media (width >= 1200px) {
+      padding-top: var(--tz-space-900);
+    }
   }
 
   li {
@@ -450,10 +476,12 @@
     padding: 0;
 
     ol {
-      display: none;
+      @media (width >= 1200px) {
+        display: none;
 
-      &:has(a[aria-current]) {
-        display: block;
+        &:has(a[aria-current]) {
+          display: block;
+        }
       }
     }
 
@@ -467,7 +495,7 @@
   }
 
   a {
-    border-left: 1px solid var(--tz-surface-primary-border);
+    border-left: 1px solid var(--tz-color-content-border);
     color: var(--tz-color-base-gray-900);
     display: block;
     max-width: 100%;
@@ -483,9 +511,11 @@
       color: var(--tz-color-base-gray-1000);
     }
 
-    &[aria-current] {
-      border-color: var(--tz-nav-secondary-highlight);
-      color: var(--tz-nav-secondary-selected-text);
+    @media (width >= 1200px) {
+      &[aria-current] {
+        border-color: var(--tz-nav-secondary-highlight);
+        color: var(--tz-nav-secondary-selected-text);
+      }
     }
   }
 
